--- a/Ui/login.ui
+++ b/Ui/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>286</width>
-    <height>144</height>
+    <width>293</width>
+    <height>132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,11 +19,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>40</x>
      <y>40</y>
-     <width>71</width>
+     <width>81</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+    </font>
    </property>
    <property name="text">
     <string>User Name:</string>
@@ -33,10 +38,15 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>90</y>
+     <y>80</y>
      <width>71</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+    </font>
    </property>
    <property name="text">
     <string> Password:</string>
@@ -45,7 +55,7 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>40</y>
      <width>113</width>
      <height>20</height>
@@ -55,8 +65,8 @@
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>90</y>
+     <x>130</x>
+     <y>80</y>
      <width>113</width>
      <height>20</height>
     </rect>
