--- a/Ui/sample_select.ui
+++ b/Ui/sample_select.ui
@@ -64,6 +64,11 @@
      <height>28</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+    </font>
+   </property>
    <property name="text">
     <string>Next Step</string>
    </property>
@@ -73,13 +78,14 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>171</width>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <family>Arial Black</family>
+     <pointsize>9</pointsize>
     </font>
    </property>
    <property name="text">
