--- a/Ui/sample_information_input.ui
+++ b/Ui/sample_information_input.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>sample_information_input</class>
+ <widget class="QWidget" name="sample_information_input">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>709</width>
-    <height>666</height>
+    <width>707</width>
+    <height>628</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>90</y>
+     <y>40</y>
      <width>641</width>
-     <height>171</height>
+     <height>161</height>
     </rect>
    </property>
    <property name="title">
@@ -29,7 +29,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>10</y>
       <width>621</width>
       <height>141</height>
      </rect>
@@ -43,7 +43,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="le_1_name"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_4">
@@ -53,7 +53,7 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QLineEdit" name="lineEdit_4">
+      <widget class="QLineEdit" name="le_1_color">
        <property name="text">
         <string/>
        </property>
@@ -67,7 +67,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="le_1_mtype"/>
      </item>
      <item row="1" column="2">
       <widget class="QLabel" name="label_5">
@@ -77,7 +77,7 @@
       </widget>
      </item>
      <item row="1" column="3">
-      <widget class="QLineEdit" name="lineEdit_5">
+      <widget class="QLineEdit" name="le_1_ctype">
        <property name="text">
         <string/>
        </property>
@@ -91,7 +91,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_3">
+      <widget class="QLineEdit" name="le_1_thickness">
        <property name="text">
         <string/>
        </property>
@@ -105,7 +105,7 @@
       </widget>
      </item>
      <item row="2" column="3">
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="cb_1_standard">
        <item>
         <property name="text">
          <string>EN374-4</string>
@@ -125,9 +125,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>270</y>
+     <y>210</y>
      <width>641</width>
-     <height>171</height>
+     <height>161</height>
     </rect>
    </property>
    <property name="title">
@@ -137,7 +137,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>10</y>
       <width>621</width>
       <height>141</height>
      </rect>
@@ -151,7 +151,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_6"/>
+      <widget class="QLineEdit" name="le_2_name"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_8">
@@ -161,7 +161,7 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QLineEdit" name="lineEdit_7">
+      <widget class="QLineEdit" name="le_2_color">
        <property name="text">
         <string/>
        </property>
@@ -175,7 +175,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_8"/>
+      <widget class="QLineEdit" name="le_2_mtype"/>
      </item>
      <item row="1" column="2">
       <widget class="QLabel" name="label_10">
@@ -185,7 +185,7 @@
       </widget>
      </item>
      <item row="1" column="3">
-      <widget class="QLineEdit" name="lineEdit_9">
+      <widget class="QLineEdit" name="le__2_ctype">
        <property name="text">
         <string/>
        </property>
@@ -199,7 +199,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_10">
+      <widget class="QLineEdit" name="le_2_thickness">
        <property name="text">
         <string/>
        </property>
@@ -213,7 +213,7 @@
       </widget>
      </item>
      <item row="2" column="3">
-      <widget class="QComboBox" name="comboBox_2">
+      <widget class="QComboBox" name="cb_2_standard">
        <item>
         <property name="text">
          <string>EN374-4</string>
@@ -233,9 +233,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>450</y>
+     <y>390</y>
      <width>641</width>
-     <height>171</height>
+     <height>161</height>
     </rect>
    </property>
    <property name="title">
@@ -245,7 +245,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>10</y>
       <width>621</width>
       <height>141</height>
      </rect>
@@ -259,7 +259,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_16"/>
+      <widget class="QLineEdit" name="le_3_name"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_20">
@@ -269,7 +269,7 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QLineEdit" name="lineEdit_17">
+      <widget class="QLineEdit" name="le_3_color">
        <property name="text">
         <string/>
        </property>
@@ -283,7 +283,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_18"/>
+      <widget class="QLineEdit" name="le_3_mtype"/>
      </item>
      <item row="1" column="2">
       <widget class="QLabel" name="label_22">
@@ -293,7 +293,7 @@
       </widget>
      </item>
      <item row="1" column="3">
-      <widget class="QLineEdit" name="lineEdit_19">
+      <widget class="QLineEdit" name="le__3_ctype">
        <property name="text">
         <string/>
        </property>
@@ -307,7 +307,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_20">
+      <widget class="QLineEdit" name="le_3_thickness">
        <property name="text">
         <string/>
        </property>
@@ -321,7 +321,7 @@
       </widget>
      </item>
      <item row="2" column="3">
-      <widget class="QComboBox" name="comboBox_4">
+      <widget class="QComboBox" name="cb_3_standard">
        <item>
         <property name="text">
          <string>EN374-4</string>
@@ -337,75 +337,73 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="bt_next">
    <property name="geometry">
     <rect>
      <x>380</x>
-     <y>630</y>
+     <y>570</y>
      <width>93</width>
      <height>28</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Next Step</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="bt_last">
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>630</y>
+     <y>570</y>
      <width>91</width>
      <height>28</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Last Step</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox_4">
+  <widget class="QLabel" name="label_13">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>641</width>
-     <height>61</height>
+     <x>30</x>
+     <y>10</y>
+     <width>281</width>
+     <height>21</height>
     </rect>
    </property>
-   <property name="title">
-    <string>General information</string>
+   <property name="font">
+    <font>
+     <family>Arial Black</family>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
    </property>
-   <widget class="QLabel" name="label_13">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>User Name:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_11">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>205</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
+   <property name="text">
+    <string>Step2: Input Samples information</string>
+   </property>
   </widget>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton</sender>
+   <sender>bt_next</sender>
    <signal>clicked()</signal>
-   <receiver>Form</receiver>
+   <receiver>sample_information_input</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
