--- a/Ui/sample_list.ui
+++ b/Ui/sample_list.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1264</width>
-    <height>609</height>
+    <width>1441</width>
+    <height>674</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,186 +16,200 @@
   <property name="sizeGripEnabled">
    <bool>true</bool>
   </property>
-  <widget class="QTableWidget" name="tableWidget">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>10</y>
-     <width>1171</width>
-     <height>531</height>
-    </rect>
-   </property>
-   <property name="autoScroll">
-    <bool>true</bool>
-   </property>
-   <property name="dragEnabled">
-    <bool>true</bool>
-   </property>
-   <property name="dragDropMode">
-    <enum>QAbstractItemView::DragDrop</enum>
-   </property>
-   <row>
-    <property name="text">
-     <string>1</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>2</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>3</string>
-    </property>
-   </row>
-   <column>
-    <property name="text">
-     <string>Name</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Color</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Materia Type</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Chemistry Type</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Thickness</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Standard</string>
-    </property>
-   </column>
-   <item row="0" column="0">
-    <property name="text">
-     <string>Sample1</string>
-    </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="styleSheet">
+      <string notr="true"> text-align : center;
+   height : 30px;
+   border-style: outset;
+   font : 30px</string>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="autoScroll">
+      <bool>true</bool>
+     </property>
+     <property name="dragEnabled">
+      <bool>true</bool>
+     </property>
+     <property name="dragDropMode">
+      <enum>QAbstractItemView::DragDrop</enum>
+     </property>
+     <row>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>6</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>7</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>8</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>9</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>10</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>11</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>12</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>13</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>14</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>15</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>16</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>17</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>18</string>
+      </property>
+     </row>
+     <column>
+      <property name="text">
+       <string>Name</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Color</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Materia Type</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Chemistry Type</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Thickness</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Standard</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Zone</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Status</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Value(N)</string>
+      </property>
+     </column>
+     <item row="0" column="0">
+      <property name="text">
+       <string/>
+      </property>
+     </item>
+     <item row="10" column="0">
+      <property name="text">
+       <string/>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item row="0" column="1">
-    <property name="text">
-     <string>Red</string>
-    </property>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btn_Privious">
+       <property name="maximumSize">
+        <size>
+         <width>201</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Privious Step</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_Next">
+       <property name="maximumSize">
+        <size>
+         <width>201</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Next Step</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="0" column="2">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="0" column="3">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="0" column="4">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="0" column="5">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="1" column="0">
-    <property name="text">
-     <string>Sample1</string>
-    </property>
-   </item>
-   <item row="1" column="1">
-    <property name="text">
-     <string>Red</string>
-    </property>
-   </item>
-   <item row="1" column="2">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="1" column="3">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="1" column="4">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="1" column="5">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="2" column="0">
-    <property name="text">
-     <string>Sample1</string>
-    </property>
-   </item>
-   <item row="2" column="1">
-    <property name="text">
-     <string>Red</string>
-    </property>
-   </item>
-   <item row="2" column="2">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="2" column="3">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="2" column="4">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-   <item row="2" column="5">
-    <property name="text">
-     <string>a</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>411</x>
-     <y>560</y>
-     <width>121</width>
-     <height>34</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Privious Step</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>620</x>
-     <y>560</y>
-     <width>121</width>
-     <height>34</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Next Step</string>
-   </property>
-  </widget>
+  </layout>
  </widget>
  <resources/>
  <connections/>
