--- a/Ui/sample_select.ui
+++ b/Ui/sample_select.ui
@@ -1,67 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>sample_select</class>
- <widget class="QDialog" name="sample_select">
+ <widget class="QWidget" name="sample_select">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>427</width>
-    <height>128</height>
+    <width>463</width>
+    <height>165</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sample Slect</string>
+   <string>Form</string>
   </property>
-  <property name="sizeGripEnabled">
-   <bool>true</bool>
-  </property>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>81</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sample1</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_2">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>30</y>
-     <width>81</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sample2</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_3">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>30</y>
-     <width>81</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sample2</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="next_step">
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>90</y>
-     <width>93</width>
-     <height>28</height>
+     <y>110</y>
+     <width>141</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -73,11 +31,50 @@
     <string>Next Step</string>
    </property>
   </widget>
+  <widget class="QCheckBox" name="checkBox_3">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>50</y>
+     <width>111</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sample3</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_1">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>50</y>
+     <width>131</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sample1</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_2">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>50</y>
+     <width>111</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sample2</string>
+   </property>
+  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>20</y>
      <width>191</width>
      <height>31</height>
     </rect>
@@ -97,19 +94,38 @@
  <connections>
   <connection>
    <sender>next_step</sender>
-   <signal>pressed()</signal>
+   <signal>clicked()</signal>
+   <receiver>sample_select</receiver>
+   <slot>NextStep()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>369</x>
+     <y>133</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>369</x>
+     <y>170</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>next_step</sender>
+   <signal>clicked()</signal>
    <receiver>sample_select</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>377</x>
-     <y>112</y>
+     <x>346</x>
+     <y>142</y>
     </hint>
     <hint type="destinationlabel">
-     <x>377</x>
-     <y>185</y>
+     <x>346</x>
+     <y>159</y>
     </hint>
    </hints>
   </connection>
  </connections>
+ <slots>
+  <slot>NextStep()</slot>
+ </slots>
 </ui>
