update the program for function of privious and next

--- a/Ui/sample_list.ui
+++ b/Ui/sample_list.ui
@@ -252,6 +252,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>tableWidget</tabstop>
+  <tabstop>btn_Next</tabstop>
+  <tabstop>btn_Privious</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
