update sample_list as customer request

--- a/Ui/sample_list.ui
+++ b/Ui/sample_list.ui
@@ -255,7 +255,7 @@
      </column>
      <column>
       <property name="text">
-       <string>APF(N)</string>
+       <string>F(N)</string>
       </property>
      </column>
      <column>
