--- a/Ui/sample_list.ui
+++ b/Ui/sample_list.ui
@@ -6,93 +6,83 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1031</width>
-    <height>687</height>
+    <width>1600</width>
+    <height>720</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <property name="topMargin">
-      <number>20</number>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>40</height>
+      </size>
      </property>
-     <property name="bottomMargin">
-      <number>20</number>
-     </property>
-     <item>
-      <widget class="QPushButton" name="btn_Privious">
-       <property name="minimumSize">
-        <size>
-         <width>151</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>151</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial Black</family>
-        </font>
-       </property>
-       <property name="text">
-        <string>Privious Step</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_Next">
-       <property name="minimumSize">
-        <size>
-         <width>151</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>151</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial Black</family>
-        </font>
-       </property>
-       <property name="text">
-        <string>Next Step</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_Export">
-       <property name="maximumSize">
-        <size>
-         <width>151</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial Black</family>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Export Result</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="font">
+         <font>
+          <family>Arial Black</family>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>                                                                                                                                                                                                Please select specimen for calculating Average Degradation - DR</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBox">
+        <property name="maximumSize">
+         <size>
+          <width>89</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>specimen1</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBox_3">
+        <property name="maximumSize">
+         <size>
+          <width>88</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>specimen2</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBox_2">
+        <property name="maximumSize">
+         <size>
+          <width>88</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>specimen3</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
-   <item row="0" column="0">
+   <item>
     <widget class="QTableWidget" name="tableWidget">
      <property name="enabled">
       <bool>true</bool>
@@ -108,7 +98,7 @@
      </property>
      <property name="styleSheet">
       <string notr="true"> text-align : center;
-   height : 30px;
+   height : 80px;
    border-style: outset;</string>
      </property>
      <property name="lineWidth">
@@ -123,49 +113,26 @@
      <property name="dragDropMode">
       <enum>QAbstractItemView::DragDrop</enum>
      </property>
+     <property name="rowCount">
+      <number>11</number>
+     </property>
+     <property name="columnCount">
+      <number>14</number>
+     </property>
      <row>
       <property name="text">
        <string/>
+      </property>
+      <property name="textAlignment">
+       <set>AlignHCenter|AlignVCenter|AlignCenter</set>
       </property>
      </row>
      <row>
       <property name="text">
        <string/>
       </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string/>
+      <property name="textAlignment">
+       <set>AlignHCenter|AlignVCenter|AlignCenter</set>
       </property>
      </row>
      <row>
@@ -245,17 +212,32 @@
      </column>
      <column>
       <property name="text">
+       <string>Exposed Time</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Specimen</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Status</string>
+       <string>OPx</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>F(N)</string>
+       <string>OPx-Data</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>RPx</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>RPx-Data</string>
       </property>
      </column>
      <column>
@@ -273,12 +255,90 @@
        <string/>
       </property>
      </item>
-     <item row="10" column="0">
-      <property name="text">
-       <string/>
+     <item row="0" column="8">
+      <property name="textAlignment">
+       <set>AlignHCenter|AlignVCenter|AlignCenter</set>
       </property>
      </item>
     </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="topMargin">
+      <number>20</number>
+     </property>
+     <property name="bottomMargin">
+      <number>20</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="btn_Privious">
+       <property name="minimumSize">
+        <size>
+         <width>151</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>151</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial Black</family>
+        </font>
+       </property>
+       <property name="text">
+        <string>Privious Step</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_Next">
+       <property name="minimumSize">
+        <size>
+         <width>151</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>151</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial Black</family>
+        </font>
+       </property>
+       <property name="text">
+        <string>Next Step</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_Export">
+       <property name="maximumSize">
+        <size>
+         <width>151</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial Black</family>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Export Result</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
@@ -295,8 +355,8 @@
    <slot>on_btnPrivStep_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>296</x>
-     <y>657</y>
+     <x>297</x>
+     <y>655</y>
     </hint>
     <hint type="destinationlabel">
      <x>304</x>
@@ -311,8 +371,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>296</x>
-     <y>657</y>
+     <x>297</x>
+     <y>655</y>
     </hint>
     <hint type="destinationlabel">
      <x>277</x>
@@ -327,8 +387,8 @@
    <slot>on_btnNextStep_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>589</x>
-     <y>657</y>
+     <x>590</x>
+     <y>655</y>
     </hint>
     <hint type="destinationlabel">
      <x>738</x>
