--- a/Ui/test.ui
+++ b/Ui/test.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Test_W</class>
+ <widget class="QDialog" name="Test_W">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -35,7 +35,7 @@
   <connection>
    <sender>pushButton</sender>
    <signal>clicked()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>Test_W</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
