update the Ui to fit Mingsu Monitor

--- a/Ui/gloves_resource.qrc
+++ b/Ui/gloves_resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="glove_pic">
+    <file>glv_high.png</file>
     <file>gloves.jpg</file>
   </qresource>
   <qresource prefix="hw_log">
